:sparkles: create password with token use case
